<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_home">Beranda</string>
    <string name="menu_order">Pesanan</string>
    <string name="menu_profile">Akun</string>
    <string name="menu_notification">Notifikasi</string>
    <string name="label_plane">Pesawat</string>
    <string name="label_car">Mobil</string>
    <string name="label_bus">Shuttle Bus</string>
    <string name="label_train">Kereta Bandara</string>
    <string name="label_ticket">Bundling Ticket</string>
    <string name="label_food_resevation">Reservasi Makanan</string>
    <string name="label_airport_express">Airport Express</string>
    <string name="label_add_baggage">Tambah Bagasi</string>
    <string name="label_assurance">Asuransi Perjalanan</string>
    <string name="label_search">Search</string>
    <string name="label_last_seen">Terakhir Anda Lihat</string>
    <string name="label_favorite_destination">Destinasi Favorit</string>
    <string name="content_favorite_destination">Terbang ke destinasi di Indonesia dan Internasional makin murah dengan promo akhir tahun</string>
    <string name="label_best_airline">Maskapai Terbaik</string>
    <string name="content_best_airline">Nikmati perjalanan Anda dengan rekomendasi maskapai penerbangan terbaik di situs kami</string>
    <string name="label_view_all">Lihat Semua</string>
    <string name="label_starting_from">Mulai Dari</string>
    <string name="format_rating">%f/5</string>
    <string name="label_mature">Dewasa</string>
    <string name="label_kid">Anak</string>
    <string name="label_baby">Bayi</string>
    <string name="label_description_kid">2-11 tahun saat melakukan perjalanan</string>
    <string name="label_description_baby">Dibawah 2 tahun saat melakukan perjalanan</string>
    <string name="message_ticket_plane">Hasil menampilkan harga rata-rata per penumpang sudah termasuk pajak, harga dapat bervariasi tergantung jenis penumpang.</string>
    <string name="message_instruction_plane">Instruksi pesan tiket untuk anak dan bayi</string>
    <string name="label_save">Simpan</string>
    <string name="label_passenger">Penumpang</string>
    <string name="label_class">Kelas</string>
    <string name="format_message_welcome_user">Selamat %s, %s</string>
    <string name="label_where_going">Mau kemana hari ini?</string>
    <string name="label_for">Dari</string>
    <string name="label_to">Ke</string>
    <string name="format_airport">%s, %s</string>
    <string name="label_departure">Keberangkatan</string>
    <string name="label_homecoming">Kepulangan</string>
    <string name="label_search_id">Cari</string>
    <string name="label_activated">Aktifkan</string>
    <string name="format_passenger_count">%d Orang</string>
    <string name="label_airport">Bandara</string>
    <string name="format_airport_name">%s - %s</string>
    <string name="label_more">Selengkapnya</string>
    <string name="label_input_email">Masukkan email</string>
    <string name="label_input_password">Kata Sandi</string>
    <string name="label_email">Email</string>
    <string name="label_password">Sandi</string>
    <string name="message_btn_login">Masuk</string>
    <string name="message_forgot_password">Lupa Password?</string>
    <string name="message_terms_condition">Dengan Log In kamu menyerujui <font fgcolor='#7B52AB'>Syarat, Ketentuan dan Kebijakan </font>Privasi Kaboor</string>
    <string name="message_doesnt_have_an_account">Belum punya akun?</string>
    <string name="message_create_account">Buat akun yuk?</string>
    <string name="message_login">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_choose_departure">Pilih Keberangkatan</string>
    <string name="message_error_title">Ooopppss.....</string>
    <string name="label_choose_homecoming">Pilih Kepulangan</string>
    <string name="format_appbar_description">%s, &#8226; %d org &#8226; %s</string>
    <string name="label_does_have_an_account">Udah punya akun?</string>
    <string name="label_just_login">Login aja!</string>
    <string name="message_login_required">Anda belum login</string>
    <string name="message_login_description">Untuk melanjutkan pemesanan tiket, anda harus login terlebih dahulu</string>
    <string name="label_login">Login</string>
    <string name="label_later">Nanti Saja</string>
    <string name="label_choose_payment_method">Pilih Metode Pembayaran</string>
    <string name="label_pay_less">Bayar Lebih Hemat!</string>
    <string name="label_input_voucher_code">Pilih/Masukkin Voucher disini</string>
    <string name="label_total_price">Total Harga</string>
    <string name="label_pay">Bayar</string>
    <string name="copy_account_number">"Nomor rekening berhasil disalin"</string>
    <string name="copy_total_payment">Total pembayaran berhasil disalin</string>
    <string name="label_upload_file_here">Upload File Disini</string>
    <string name="label_has_been_uploaded">File telah diupload</string>
    <string name="format_insurance_price">%s /pax</string>
    <string name="label_booker_detail">Detail Pemesan</string>
    <string name="label_passenger_detail">Detail Penumpang</string>
    <string name="span_contact_us">Hubungi Customer Service __Kaboor__ Melalui :</string>
    <string name="message_no_internet_connection">Tidak ada koneksi internet</string>
    <string name="format_order_id">ID Pemesanan : %s</string>
    <string name="copy_booking_code">Kode booking berhasil disalin</string>
    <string name="help_payment_confirmed">Biasanya, pembayaran akan segera diproses setelah Anda menyelesaikan transaksi pembelian tiket pesawat. Proses ini dapat memakan waktu beberapa saat tergantung pada metode pembayaran yang Anda gunakan. Jika pembayaran Anda telah berhasil diproses, Anda akan menerima konfirmasi melalui email atau melalui aplikasi pemesanan kami.</string>
    <string name="help_how_to_pay">Membayar pesanan tiket pesawat Anda dengan cepat dan mudah adalah prioritas kami. Berikut langkah-langkah singkat untuk melakukan pembayaran:</string>
    <string name="help_change_phone">ika Anda ingin mengubah nomor handphone yang terdaftar di akun Anda, ikuti langkah-langkah berikut:</string>
    <string name="help_change_email">Jika Anda perlu mengganti alamat email yang terdaftar di akun Anda, ikuti langkah-langkah berikut:</string>
    <string name="help_transaction_failed">Jika Anda mengalami masalah dengan transaksi Anda, berikut adalah langkah-langkah yang dapat Anda ikuti untuk mencari solusi:</string>
    <string name="help_transaction_failed_bottom">Jangan lupa untuk menyertakan detail transaksi yang terkait, seperti nomor pemesanan atau detail pembayaran, saat menghubungi layanan pelanggan kami untuk mempercepat proses bantuan.</string>
    <string name="help_failed_register">Jika Anda mengalami masalah saat mencoba mendaftar akun, berikut adalah beberapa langkah yang dapat Anda coba untuk menyelesaikan masalah:</string>
</resources>