<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/menu_home"
        app:iconTint="@color/neutral6"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/ic_order"
        android:orderInCategory="2"
        android:title="@string/menu_order"
        app:iconTint="@color/neutral6"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"
        android:orderInCategory="3"
        android:title="@string/menu_notification"
        app:iconTint="@color/neutral6"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_user"
        android:orderInCategory="4"
        android:title="@string/menu_profile"
        app:iconTint="@color/neutral6"
        app:showAsAction="ifRoom" />
</menu>