<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.login.LoginPasswordActivity">

    <com.synrgy.common.reusable.KaboorAppbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:kaboorAppbar_title="@string/message_login" />

    <com.synrgy.common.reusable.KaboorEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:kaboorEditText_enable="false"
        app:kaboorEditText_label="@string/label_email" />

    <com.synrgy.common.reusable.KaboorEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:kaboorEditText_hint="@string/kata_sandi"
        app:kaboorEditText_label="@string/label_password"
        app:kaboorEditText_type="password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/KaboorButton.Gradient"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/message_btn_login"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_terms_condition"
        style="@style/KaboorTextView.Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/message_terms_condition"
        android:textAlignment="center"
        android:textColor="@color/neutral6" />
</androidx.appcompat.widget.LinearLayoutCompat>