<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingVertical="@dimen/dimen_40dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        style="@style/KaboorTextView.Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:text="@string/message_login_required" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description"
        style="@style/KaboorTextView.Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:gravity="center"
        android:textColor="@color/neutral6"
        android:text="@string/message_login_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_msv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42dp"
        style="@style/KaboorButton.Gradient"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_38dp"
        android:text="@string/label_login"/>
</androidx.appcompat.widget.LinearLayoutCompat>