<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="208dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_header_login" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_header_login_gradient" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/KaboorTextInput"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            app:hintEnabled="false">

            <com.synrgy.common.reusable.auth.EmailCustomView
                android:id="@+id/et_email"
                style="@style/KaboorEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rectangle_search"
                android:hint="@string/label_input_email"
                android:inputType="text"
                android:textColor="@color/neutral6" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forgot_password"
            style="@style/KaboorTextView.Title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/message_forgot_password"
            android:textAlignment="viewEnd"
            android:textColor="@color/secondary01" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/KaboorButton.Gradient"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_42dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:text="@string/message_btn_login"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_terms_condition"
            style="@style/KaboorTextView.Title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/message_terms_condition"
            android:textAlignment="center"
            android:textColor="@color/neutral6" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_42dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_doesnt_have_an_account"
                style="@style/KaboorTextView.Title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_doesnt_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/neutral6" />

            <Space
                android:layout_width="@dimen/dimen_4dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_create_account"
                style="@style/KaboorTextView.Title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_create_account"
                android:textAlignment="center"
                android:textColor="@color/secondary01" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>